# CachyOS-Welcome

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  build.rs  cachyos-hello.desktop  cachyos-welcome.gresource.xml  compile_flags.txt  launch.sh  meson.build  postinstall.sh
.github/archlinux/: Dockerfile
.github/workflows/: rust.yml
build-aux/: cargo.py
cmake/: CompilerWarnings.cmake
data/: preferences.json
data/application_utility/: advanced.json  default.json
data/pages/: copy-release-trans.py
data/pages/da/: involved  readme  release
data/pages/de/: involved  readme  release
data/pages/en/: involved  readme  release
data/pages/es/: readme
data/pages/fr/: involved  readme  release
data/pages/hu/: involved  readme
data/pages/it/: involved  readme  release
data/pages/ko-KR/: readme  release
data/pages/nl/: involved  readme
data/pages/pl/: involved  readme  release
data/pages/pt-BR/: involved  readme
data/pages/pt-PT/: involved  readme  release
data/pages/ro-RO/: involved  readme  release
data/pages/ru/: involved  readme  release
data/pages/sv/: involved  readme
data/pages/tr/: involved  readme  release
data/pages/zh-CN/: involved  readme  release
i18n/de/: cachyos_hello.ftl
i18n/en/: cachyos_hello.ftl
i18n/it/: cachyos_hello.ftl
i18n/pl/: cachyos_hello.ftl
i18n/ru/: cachyos_hello.ftl
i18n/tr/: cachyos_hello.ftl
i18n/zh-CN/: cachyos_hello.ftl
icons/: meson.build
po/: LINGUAS  am.po  am_ET.po  ar.po  ast_ES.po  az.po  be.po  bg.po  bn.po  ca.po  ca@valencia.po  ca_ES.po  cs.po  da.po  de.po  el_GR.po  eo.po  es.po  es_AR.po  et.po  fa.po  fa_IR.po  fi.po  fi_FI.po  fr.po  he.po  hi.po  hi_IN.po  hr.po  hu.po  id_ID.po  is.po  it.po  ja.po  ka.po  kn.po  ko_KR.po  ku.po  lt.po  manjaro-hello.pot  (+28 more)
src/: alpm_helper.rs  application.rs  application_browser.rs  config.rs.in  data_types.rs  embed_data.rs  gresource.rs  hello.cpp  hello.hpp  helper.hpp  localization.rs  main.cc  main.cpp  main.rs  meson.build  pages.rs  utils.rs
subprojects/: fmt.wrap
ui/: base.css  cachyos-hello.glade  style.css
utils/: create_pot.sh  files_to_translate
