[package]
name = "cachyos-hello"
version = "0.9.10"
authors = ["Vladislav Nepogodin <nepogodin.vlad@gmail.com>"]
license = "GPLv3"
edition = "2021"

[dependencies]
alpm = { default-features = false, version = "2.2.2" }
alpm-utils = { features = ["conf"], default-features = false, version = "2.0.0" }
pacmanconf = "2.0.0"

subprocess = "0.2.9"
once_cell = { default-features = false, version = "1.17.1" }
i18n-embed = { version = "0.13.8", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.6.6"
rust-embed = { version = "6.6.1", features = ["debug-embed", "include-exclude"] }
gtk = { version = "0.17.1", default-features = false }
gio = { version = "0.17.9", default-features = false }
gdk = "0.17.1"
gdk-pixbuf = "0.17.0"
glib = { default-features = false, version = "0.17.9" }
serde = { version = "1.0.162", default-features = false }
serde_json = "1.0.96"
reqwest = { version = "0.11.17", features = ["blocking"] }
unic-langid = "0.9.1"

[profile.release]
strip = "symbols"
panic = "abort"
lto = true
opt-level = 3
codegen-units = 1
