[package]
name = "cachyos-hello"
version = "0.10.1"
authors = ["Vladislav Nepogodin <nepogodin.vlad@gmail.com>"]
license = "GPLv3"
edition = "2021"

[dependencies]
alpm = { default-features = false, version = "2" }
alpm-utils = { features = ["conf"], default-features = false, version = "2" }
pacmanconf = "2"

subprocess = "0.2"
once_cell = { default-features = false, version = "1.18" }
i18n-embed = { version = "0.14", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.7"
rust-embed = { version = "8", features = ["debug-embed", "include-exclude"] }
gtk = { version = "0.18", default-features = false }
gio = { version = "0.18", default-features = false }
gdk = "0.18"
gdk-pixbuf = "0.18"
glib = { default-features = false, version = "0.18" }
serde = { version = "1", default-features = false }
serde_json = "1"
reqwest = { version = "0.11", features = ["blocking"] }
unic-langid = "0.9"
phf = { version = "0.11", features = ["macros"], default-features = false }

[profile.release]
strip = "symbols"
panic = "abort"
lto = true
opt-level = 3
codegen-units = 1
